--- a/index.Rmd
+++ b/index.Rmd
@@ -1,4 +1,8 @@
 ---
+title: "paul tsagaroulis"
+author: "paul tsagaroulis"
+date: "10/11/2020"
+output: html_document
 ---
 
 <link rel="stylesheet" href="styles.css" type="text/css">
