--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,16 @@ title: "paul tsagaroulis - about me"
 output: html_document
 ---
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-61071-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-61071-2');
+</script>
+
 ## Hello... My research interest is in developing a better understanding of how data visualization practices may help facilitate comprehension.  
 
 ### My study explored the relationship data visualizations (tables and bar charts) and comprehension about the data. 
