--- a/presentations.Rmd
+++ b/presentations.Rmd
@@ -4,6 +4,16 @@
 title: "paul tsagaroulis - presentations"
 output: html_document
 ---
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-61071-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-61071-2');
+</script>
   
 ## Conferences & presentations  
   
