--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,10 @@ title: "paul tsagaroulis - about me"
 output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61071-2"></script>
 <script>
