--- a/people-analytics.Rmd
+++ b/people-analytics.Rmd
@@ -17,7 +17,9 @@ knitr::opts_chunk$set(echo = TRUE)
   gtag('config', 'UA-61071-2');
 </script>
 
-For me, **people analytics** refers to data-driven practices that help improve organizations and their workforce. But analyzing data about people at work is nuanced, complex, and can be challenging. For most organizations, advancing people analytics may predicate on a strong data culture. In contrast, many organizations may struggle with limited transparency of HR data to advance people analytics. In addition, fully embracing people analytics may require partnering with finance and technology teams – it’s not just an ‘HR thing.’ And so on.
+#### For me, **people analytics** refers to data-driven practices that help improve organizations and their workforce. 
+
+But analyzing data about people at work is nuanced, complex, and can be challenging. For most organizations, advancing people analytics may predicate on a strong data culture. In contrast, many organizations may struggle with limited transparency of HR data to advance people analytics. In addition, fully embracing people analytics may require partnering with finance and technology teams – it’s not just an ‘HR thing.’ And so on.
 
 I began my career in workforce analytics in 2003 (before *people analytics* entered our vocabulary) after completing my master of arts in industrial-organizational psychology. This year, I completed my PhD in business psychology from the Chicago School of Psychology. 
 
