--- a/presentations.Rmd
+++ b/presentations.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE)
   gtag('config', 'UA-61071-2');
 </script>
   
-## Conferences & presentations  
+#### Conferences & presentations  
   
 __Data visualization workshop at the 2021 SIOP conference__  
 Data visualization: How to make a picture worth a 1000 words. Successful decision-making requires turning data insights into action. Data visualization facilitates this by presenting data with impact (art) while staying true to the results (science). This workshop focuses on practical applications of data visualization principles to drive impact. Attendees will be given opportunities to practice those principles during the session.  
@@ -54,7 +54,7 @@ Data-driven approaches to human capital analytics. Learn about how the U.S. Gene
 __Presenter at the 2015 Tableau conference__  
 Dashboards at the U.S. General Services Administration. Learn about how the U.S. General Services Administration is taking a data-driven approach to manage and deploy human capital analytics and execute business strategy. The team’s first deliverable was the deployment of a workforce dashboard report using Tableau.
   
-## I’ve also mentored colleagues to present at conferences  
+#### I’ve also mentored colleagues to present at conferences  
  
 __Workforce data science in the U.S. Federal Government__  
 Presented by Aubrey Scarborough at the 2017 Tableau conference
