Updated google trends through Dec 2020

--- a/people-analytics.Rmd
+++ b/people-analytics.Rmd
@@ -26,7 +26,9 @@ My professional interest is in helping HR teams improve data literacy, for examp
 I have found that when we start with people analytics, we often end with a better understanding of organizational outcomes. 
 
 ```{r, gTrend, echo=FALSE, message=FALSE, results=FALSE}
-library(tidyverse)
+library(tidyverse)    # combination of packages
+library(knitr)
+
 setwd("/Users/paul/OneDrive/github") 
 getwd()
 
@@ -35,15 +37,19 @@ head(data); tail(data)
 
 gTrend<-ggplot() + geom_line(aes(x=year,y=cumsum(count),color='HR analytics'),data %>% filter(query=='HR Analytics')) +
   geom_line(aes(x=year,y=cumsum(count), color='People analytics'),data %>% filter(query=='People Analytics')) +
-  geom_line(aes(x=year,y=cumsum(count), color='Workforce analytics'),data %>% filter(query=='Workforce Analytics')) 
+  geom_line(aes(x=year,y=cumsum(count), color='Workforce analytics'),data %>% filter(query=='Workforce Analytics')) +
+  lims(x= c(2004, 2020), y = c(0, 6000))
   
 gTrendchart <- gTrend + 
-  ggtitle("Google searches (cumulative since 2014)") + 
+  ggtitle("'HR analytics' leads search interest (cumulative, by month since 2004)") + 
+  geom_point() + labs(caption = "Source: trends.google.com") +
   theme(
-  legend.position="bottom",   
+  legend.position="bottom",
   legend.title = element_blank(),
   axis.title.x = element_blank(),
   axis.title.y = element_blank()) 
 
 gTrendchart
 ```
+
+
