--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,12 @@ knitr::opts_chunk$set(echo = TRUE)
   gtag('config', 'UA-61071-2');
 </script>
 
-![Paul Tsagaroulis](https://raw.githubusercontent.com/ptsag/ptsag.github.io/main/paul-tsagaroulis.jpg){#id .class width=150 height=150px} 
-Hello. I'm the director of HR Analytics at Carrier. In my previous role, I developed a team of analysts and data engineers as the HR analytics division director at the U.S. General Services Administration. I've also conducted workforce effectiveness research at Allstate and led HR analytics support for global functions at UBS. I've been recognized as a data visualization expert and have researched the role of numeracy and graph literacy with comprehension of data visualizations. I have a PhD in Business Psychology (industrial-organizational track) from the Chicago School of Professional Psychology.
+![](https://raw.githubusercontent.com/ptsag/ptsag.github.io/main/paul-tsagaroulis.jpg){#id .class width=150 height=150px} 
 
-My research interest is in developing a better understanding of how data visualization practices may help facilitate comprehension. My dissertation study explored the relationship between data visualizations practices (data presented in tables and as charts) and comprehension about the data. [Read more...](research.html)
+Hello. I'm the director of HR Analytics at Carrier. In my previous role, I developed a team of analysts and data engineers as the HR analytics division director at the U.S. General Services Administration. I've also conducted workforce effectiveness research at Allstate and led HR analytics support for global functions at UBS. 
+
+I have more than 15 years of experience in [people analytics](people-analytics.html). I have a PhD in Business Psychology (industrial-organizational track) from the Chicago School of Professional Psychology. 
+
+I've been recognized as a data visualization expert and have [spoken](presentations.html) at national conferences about best practices in data visualization. 
+
+My research interest is in developing a better understanding of how data visualization practices may help facilitate comprehension. My dissertation study explored the relationship between data visualizations practices (data presented in tables and as charts) and comprehension about the data. [Read more.](research.html)
