--- a/index.Rmd
+++ b/index.Rmd
@@ -24,6 +24,4 @@ Hello. I'm the director of HR analytics at Carrier. In my previous role, I devel
 
 I have more than 15 years of experience in [people analytics](people-analytics.html) and have a PhD in Business Psychology (industrial-organizational track) from the Chicago School of Professional Psychology. 
 
-I've been recognized as a data visualization expert and have [spoken](presentations.html) at national conferences about best practices in data visualization. 
-
-My research interest is in developing a better understanding of how data visualization practices may help facilitate comprehension. My dissertation study explored the relationship between data visualizations practices (data presented in tables and as charts) and comprehension about the data. [Read more.](research.html)
+I've [spoken](presentations.html) at national conferences about best practices in data visualization. My research interest is in developing a better understanding of how data visualization practices may help facilitate comprehension. My dissertation study explored the relationship between data visualizations practices (data presented in tables and as charts) and comprehension about the data. [Read more.](research.html)
