--- a/index.Rmd
+++ b/index.Rmd
@@ -18,10 +18,10 @@ knitr::opts_chunk$set(echo = TRUE)
   gtag('config', 'UA-61071-2');
 </script>
 
-![](https://raw.githubusercontent.com/ptsag/ptsag.github.io/main/paul-tsagaroulis.jpg){#id .class width=150 height=150px} 
+![](https://raw.githubusercontent.com/ptsag/ptsag.github.io/main/paul-tsagaroulis.jpg){#id .class width=200 height=200px} 
 
-Hello. I'm the director of HR analytics at Carrier. In my previous role, I developed a team of analysts and data engineers as the HR analytics  director at the U.S. General Services Administration. I've also conducted workforce effectiveness research at Allstate and led HR analytics support for global functions at UBS. 
+Hello. I help improve the workforce using data-driven methods. 
 
-I have more than 15 years of experience in [people analytics](people-analytics.html) and have a PhD in Business Psychology (industrial-organizational track) from the Chicago School of Professional Psychology. 
+I have more than 15 years of experience in [people analytics](people-analytics.html) and have a PhD in Business Psychology (industrial-organizational track) from the Chicago School of Professional Psychology.
 
-I've [spoken](presentations.html) at national conferences about best practices in data visualization. My research interest is in developing a better understanding of how data visualization practices may help facilitate comprehension. My dissertation study explored the relationship between data visualizations practices (data presented in tables and as charts) and comprehension about the data. [Read more.](research.html)
+I've [presented](presentations.html) best practices in data visualization . My research interest is in developing a better understanding of how data visualization practices may help facilitate comprehension. [Read more](research.html).
