--- a/people-analytics.Rmd
+++ b/people-analytics.Rmd
@@ -18,13 +18,15 @@ knitr::opts_chunk$set(echo = TRUE)
   gtag('config', 'UA-61071-2');
 </script>
 
+I began my career in workforce analytics in 2003 (before *people analytics* entered our vocabulary, see chart). 
+
 For me, **people analytics** refers to data-driven practices that help improve organizations and their workforce. But analyzing data about people at work is nuanced, complex, and can be challenging. 
 
-For most organizations, advancing people analytics may predicate a strong data culture. In contrast, many organizations may struggle with limited transparency of HR data to advance people analytics. Also, fully embracing people analytics may require partnering with finance and technology teams – it’s not just an ‘HR thing’. 
+For most organizations, advancing people analytics may require a strong data culture. Also, many organizations may struggle with limited transparency of HR data to advance people analytics. 
+
+Fully embracing people analytics may require partnering with finance and technology teams – it’s not just an ‘HR thing’. 
 
 When we start with people analytics, we often end with a better understanding of organizations.
-
-I began my career in workforce analytics in 2003 (before *people analytics* entered our vocabulary, see chart). 
 
 ```{r, gTrend, echo=FALSE, message=FALSE, results=FALSE}
 library(tidyverse)    # combination of packages
